# forge

./: .cursoringnore  .gitignore  Cargo.toml  README-doc-sync-system.md  README.md  forge.default.yaml  forge.yaml
config/agents/: doc-sync-agents.yaml
crates/forge_agents/: Cargo.toml
crates/forge_agents/src/: lib.rs  main.rs
crates/forge_agents/src/agents/: css_expert_agent.rs  doc_content_syncer_agent.rs  doc_coordinator_agent.rs  doc_runner_agent.rs  doc_verifier_agent.rs  docusaurus_expert_agent.rs  mod.rs  ui_design_expert_agent.rs
crates/forge_agents/src/core/: agent.rs  behavior.rs  config.rs  factory.rs  mod.rs  prompt.rs  role.rs
crates/forge_agents/src/events/: doc_sync_events.rs  mod.rs
crates/forge_agents/src/state/: doc_sync_state.rs  mod.rs
crates/forge_agents/src/utils/: mod.rs
crates/forge_api/src/: api.rs  executor.rs
crates/forge_app/src/: app.rs  provider.rs
crates/forge_domain/src/: orch.rs  (+2 more)
docs/: README.md  agent_architecture.md  api_reference.md  custom_tools.md  forge_cli_rust_documentation.md  getting_started.md  rust_project_explanation.md  testing_guide.md  tools_system.md  workflow_architecture.md
templates/: agents-config.yaml  doc-content-syncer-config.yaml  fix-planner-config.yaml  system-prompt-change-implementer.hbs  system-prompt-css-expert.hbs  system-prompt-doc-change-planner.hbs  system-prompt-doc-content-syncer.hbs  system-prompt-doc-coordinator.hbs  system-prompt-doc-runner.hbs  system-prompt-doc-syncer.hbs  system-prompt-doc-verifier.hbs  system-prompt-docusaurus-expert.hbs  system-prompt-ui-design-expert.hbs
(+23 files in other folders)
