[package]
name = "forge_agents"
version = "0.1.0"
edition = "2021"
description = "Specialized agents for the Forge CLI"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
glob = "0.3"
sha2 = "0.10"
chrono = "0.4"
regex = "1.5"
walkdir = "2.3"
md5 = "0.7"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
log = "0.4.20"
crypto = "0.5.0"
